# disentangled_rnns

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  pylint.yml  pytest_and_autopublish.yml
code/: README.md  config_cog.py  config_disrnn.py  config_lstm.py  fit_cognitive_model.py  train_eval_disrnn.py  train_lstm.py  train_xval_disrnn.py
disentangled_rnns/: __init__.py  example.py
disentangled_rnns/notebooks/: train_multisubject_disrnn.ipynb  train_neuro_disrnn.ipynb  train_single_disrnn.ipynb  train_single_gru.ipynb
