[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "disentangled_rnns"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "GDM NeuroLab", email="no-reply@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
"dm-haiku>=0.0.13, <0.1",
"jax~=0.5",
"chex~=0.1",
"optax~=0.2",
"flax~=0.10",
"numpy>=2.0, <3.0",
"scipy>=1.15, <2.0",
"matplotlib>=3.9, <4.0",
"absl-py>=2.1, <3.0",
]


# `version` is automatically set by flit to use `disentangled_rnns.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-deepmind/disentangled_rnns"
repository = "https://github.com/google-deepmind/disentangled_rnns"
changelog = "https://github.com/google-deepmind/disentangled_rnns/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "absl-py",
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
